Fix scroll and add jumpTo function

--- a/src/index.css
+++ b/src/index.css
@@ -6,10 +6,11 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   max-width: 100vw;
-  overflow: hidden;
-  position: fixed;
   width: 100%;
+  background-color: #282c34;
   height: 100%;
+  padding-top: 3rem;
+  padding-bottom: 1rem;
 }
 
 code {
